syntax = "proto3";
package protomsg;
option go_package = "root/protomsg";

import "protobuf/data.proto";

// 网络消息
enum S777MSG {
	UNKNOW_S777 = 0;
	CS_ENTER_GAME_S777_REQ = 18001; // 玩家请求进入房间
	SC_ENTER_GAME_S777_RES = 18002;
	CS_LEAVE_GAME_S777_REQ = 18003; // 玩家请求退出房间
	SC_LEAVE_GAME_S777_RES = 18004;
	
	CS_START_S777_REQ           = 18008;// 请求开始游戏1
	SC_START_S777_RES           = 18009;
	
	SC_UPDATE_S777_BONUS        = 18010;// 通知更新奖金池

	CS_PLAYERS_S777_LIST_REQ    = 18015; // 请求在线玩家列表
	SC_PLAYERS_S777_LIST_RES    = 18016;
}

// 游戏1 图案枚举
enum S777ID {
	S777Unknow  = 0;
	S7771       = 1; // 福字
	S7772       = 2; // 铜锣
	S7773       = 3; // 金鸟
	S7774       = 4; // 帆船
	S7775       = 5; // 金龟
	S7776       = 6; // 元宝
	S7777       = 7; // 通宝
	S7778       = 8; // A
	S7779       = 9; // K
	S77710      = 10; // Q
	S77711	    = 11; // J
	S77712      = 12; // 10
	S77713	    = 13; // 9
}

// 请求进入房间
message ENTER_GAME_S777_REQ {
	uint32 AccountID = 1;// 
	uint32 RoomID    = 2;// 房间ID
}

message ENTER_GAME_S777_RES {
	message S777Ratio {
		S777ID ID    = 1;
		int32 Same_3 = 4; // 三连赔率
		int32 Same_4 = 5; // 四连赔率
		int32 Same_5 = 6; // 五连赔率
	}
	uint32 RoomID 	    		 	= 1; // 房间ID
	int64 Basics        		 	= 2; // 基础金额
	map<int32, int64> Bonus         = 3; // key 等级  val 奖池
	int64 LastBet                   = 4; // 最后一次压住
	repeated uint64 Bets 		 	= 5; // 可以选择的押注金额
	map<int32, S777Ratio> Ratio    = 6; //  图案连续赔率
	int32 FeeCount                  = 8; // 免费次数
}

// 请求退出房间
message LEAVE_GAME_S777_REQ {
	uint32 AccountID = 1;// 
	uint32 RoomID    = 2;// 房间ID
}

message LEAVE_GAME_S777_RES {
    uint32 Ret    = 1; // 0.可以退出  1.不能退出房间
	uint32 RoomID = 2; // 房间ID
}

////////////////////////////////////////////// 游戏 /////////////////////////////////////////////
// 请求开始游戏1
message START_S777_REQ {
	uint64 Bet = 1; 
}

message START_S777_RES {
	uint64 Ret 						  = 1; // 0成功
	repeated int32 PictureList        = 2; // 图形列表( [0-14] 即15个图形)
	map<int32, int64> Bonus           = 3; // 水池盈利 (key级别 vale盈利)
	int64 Money                       = 4; // 身上的钱
	int64 TotalOdds                   = 5; // 总赔率
	int64 FreeCount                   = 6; // 获得免费次数
	repeated S777_position Shows      = 7; // 中奖需要展示的坐标
}

message S777_position{
	int32 px = 1;
	int32 py = 2;
}

// 通知更新奖金池
message UPDATE_S777_BONUS{
	map<int32, int64> Bonus  = 1; // key 等级  val 奖池
}


// 请求S777玩家列表
message PLAYERS_S777_LIST_RES{
   repeated AccountStorageData players = 1; // 房间捏所有的玩家
}
